Adding image so that pages show properly

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="window-walker" class="anchor" href="#window-walker"><span class="octicon octicon-link"></span></a>Window Walker</h1>
 
-<p><img src="screenshot.png" alt=""></p>
+<p><img src="images/screenshot.png" alt=""></p>
 
 <blockquote>
 <p><strong>"Why walk your dog when you can walk your Window?"</strong> -Yuki</p>
